提交更新文件

--- a/rich/public/thConfig.json
+++ b/rich/public/thConfig.json
@@ -9,7 +9,7 @@
     "APP_ID": "",
     "VERSION": "",
     "PLATFORM_ID": "",
-    "IP_CONFIG": "https://cfg.bjl3322.com:8119/public",
+    "IP_CONFIG": "https://cfg.bjl3322.com:8119/rich/public",
     "Trumpet": "本游戏仅为娱乐休闲使用，严禁在平台内赌博等行为！",
     "Bulletin": "",
     "CustomerDomain": "",
