--- a/dl/rich/ipa/RICH777.plist
+++ b/dl/rich/ipa/RICH777.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://bbdown.oss-cn-hangzhou.aliyuncs.com/iosQieYe/40009.ipa</string>
+					<string>https://cfg.bjl3322.com:8119/dl/rich/ipa/RICH777.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
