--- a/dl/rich/ipa/rich10000.plist
+++ b/dl/rich/ipa/rich10000.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://cfg.bjl3322.com:8119/dl/rich/ipa/RICH777.ipa</string>
+					<string>https://raw.githubusercontent.com/dd2019dd/dd2019dd.github.io/master/dl/rich/ipa/rich10000.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
