--- a/dl/rich/ipa/rich10000.plist
+++ b/dl/rich/ipa/rich10000.plist
@@ -39,9 +39,9 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
-				<string>澳门首家移动百家乐平台</string>
+				<string></string>
 				<key>title</key>
-				<string>星月城百家乐</string>
+				<string>RICH777</string>
 			</dict>
 		</dict>
 	</array>
