--- a/dl/rich/ipa/rich10000.plist
+++ b/dl/rich/ipa/rich10000.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/dd2019dd/dd2019dd.github.io/master/dl/rich/ipa/rich10000.ipa</string>
+					<string>https://update.bjl3322.com:8118/dl/rich/ipa/rich10000.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.baijiale.xycgame</string>
+				<string>com.taiyu.game003</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
